--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +11,13 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
+    "rsuite": "^5.6.4",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
